# B4Lang

./: .gitignore  CMakeLists.txt  README.md  ast.c  ast.dot  ast.h  compile.sh  convert_dot_to_png.sh  lexer.c  lexer.h  main.c  parser.c  parser.h  script.b4l  script.b4l.out  script.b4l.s  test.b4l
include/: ast.h  compiler.h  parser.h
src/: ast.c  compiler.c  lexer.c  main.c  parser.c
